--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,13 @@ dist-ssr
 # Task Master
 .taskmaster/logs/
 .taskmaster/cache/
+
+# Added by Claude Task Master
+dev-debug.log
+# Dependency directories
+node_modules/
+.vscode
+# OS specific
+# Task files
+tasks.json
+tasks/ 
