--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
+    "@supabase/supabase-js": "^2.49.10",
     "@tailwindcss/postcss": "^4.1.8",
     "@tanstack/react-query": "^5.80.5",
     "class-variance-authority": "^0.7.1",
