--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage",
     "test:e2e": "echo 'E2E tests not configured yet'",
+    "test:accessibility": "node scripts/test-accessibility.cjs",
     "lint": "eslint src/",
     "lint:fix": "eslint src/ --fix",
     "lint:all": "eslint .",
@@ -35,11 +36,24 @@
     "security:report": "npm run security:audit && echo 'Security report generated in security-reports/ directory'"
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-collapsible": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-toast": "^1.2.14",
     "@supabase/supabase-js": "^2.49.10",
-    "@tailwindcss/postcss": "^4.1.8",
     "@tanstack/react-query": "^5.80.5",
     "@types/recharts": "^1.8.29",
+    "chart.js": "^4.4.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "connect-redis": "^8.1.0",
@@ -54,7 +68,9 @@
     "helmet": "^8.1.0",
     "lucide-react": "^0.513.0",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.2",
     "recharts": "^2.15.3",
     "redis": "^5.5.6",
     "tailwind-merge": "^3.3.0",
@@ -63,6 +79,7 @@
     "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
+    "@axe-core/react": "^4.10.2",
     "@eslint/js": "^9.25.0",
     "@tanstack/react-query-devtools": "^5.80.5",
     "@testing-library/jest-dom": "^6.6.3",
@@ -76,6 +93,7 @@
     "@typescript-eslint/parser": "^8.33.1",
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
+    "axe-core": "^4.10.3",
     "eslint": "^9.28.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-jsx-a11y": "^6.10.2",
@@ -89,7 +107,7 @@
     "mkcert": "^3.2.0",
     "postcss": "^8.5.4",
     "prettier": "^3.5.3",
-    "tailwindcss": "^4.1.8",
+    "tailwindcss": "^3.4.17",
     "terser": "^5.40.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
