--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toast": "^1.2.14",
     "@supabase/supabase-js": "^2.49.10",
+    "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^5.80.5",
     "@types/recharts": "^1.8.29",
     "chart.js": "^4.4.9",
@@ -70,6 +71,7 @@
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.2",
     "recharts": "^2.15.3",
     "redis": "^5.5.6",
