--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "react-router-dom": "^7.6.2",
     "recharts": "^2.15.3",
     "redis": "^5.5.6",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
     "task-master-ai": "^0.16.1",
     "winston": "^3.17.0",
