fix: Private 저장소에서 dependency-review 비활성화
- GitHub Advanced Security가 필요한 dependency-review-action 비활성화
- Private 저장소에서는 유료 기능이므로 if: false로 설정
- 다른 보안 검사는 계속 실행 (npm audit, CodeQL 등)

--- a/.github/workflows/security-audit.yml
+++ b/.github/workflows/security-audit.yml
@@ -64,7 +64,8 @@ jobs:
   dependency-review:
     name: Dependency Review
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request'
+    # Private 저장소에서는 GitHub Advanced Security가 필요하므로 비활성화
+    if: false
     
     steps:
       - name: Checkout Repository
